<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.informasigempabumi.igmapp.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_list_gempa"
        android:name="com.informasigempabumi.igmapp.ui.listGMP.ListgempaFragment"
        android:label="@string/list_gempa"
        tools:layout="@layout/fragment_listgempa" />
    <fragment
        android:id="@+id/navigation_maps"
        android:name="com.informasigempabumi.igmapp.ui.Maps.MapsFragment"
        android:label="@string/maps"
        tools:layout="@layout/fragment_maps" />
    <fragment
        android:id="@+id/navigation_setting"
        android:name="com.informasigempabumi.igmapp.ui.setting.SettingFragment"
        android:label="@string/tittle_setting"
        tools:layout="@layout/fragment_setting" />
</navigation>