<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:src="@drawable/material_map_outline"
            app:layout_constraintBottom_toBottomOf="@+id/materialCardView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/materialCardView" />

        <TextView
            android:id="@+id/tv_list_wilayah"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/sample_list_wilayah"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/imageView"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="@+id/imageView" />

        <TextView
            android:id="@+id/tv_list_jam_yanglalu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/jam_yang_lalu_sample"
            android:textSize="12sp"
            app:layout_constraintEnd_toStartOf="@+id/materialCardView"
            app:layout_constraintTop_toTopOf="@+id/tv_list_wilayah" />

        <TextView
            android:id="@+id/tv_list_tgl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/jam_sample"
            android:textSize="12sp"
            app:layout_constraintEnd_toStartOf="@+id/materialCardView"
            app:layout_constraintTop_toBottomOf="@+id/tv_list_jam_yanglalu" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/materialCardView"
            android:layout_width="50dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:background="@color/bg_frame"
            app:cardBackgroundColor="@color/bg_frame"
            app:cardCornerRadius="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints">

            <TextView
                android:id="@+id/tv_list_magnitudo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:text="@string/sample_magnitudo"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold" />

        </com.google.android.material.card.MaterialCardView>

        <View
            android:id="@+id/view_line"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/line_for_list"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>