<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:behavior_hideable="false"
    app:behavior_peekHeight="auto"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

<!--    <androidx.cardview.widget.CardView-->
<!--        android:layout_width="84dp"-->
<!--        android:layout_height="8dp"-->
<!--        android:layout_gravity="center"-->
<!--        android:layout_marginBottom="8dp"-->
<!--        app:cardBackgroundColor="@color/bg_frame"-->
<!--        app:cardCornerRadius="4dp" />-->

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:background="@drawable/bg_bottomsheet_home"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/baseline_date_range_24"
                app:layout_constraintBottom_toBottomOf="@+id/materialCardView"
                app:layout_constraintStart_toStartOf="@+id/materialCardView3"
                app:layout_constraintTop_toTopOf="@+id/materialCardView" />

            <TextView
                android:id="@+id/tv_tgl_jam"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:text="18 Feb 2023\n13:14:38 WIB"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@+id/imageView2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView2"
                app:layout_constraintTop_toTopOf="@+id/imageView2" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/materialCardView"
                android:layout_width="70dp"
                android:layout_height="0dp"
                android:layout_marginTop="16dp"
                android:background="@color/bg_frame"
                app:cardBackgroundColor="@color/bg_frame"
                app:cardCornerRadius="50dp"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toEndOf="@+id/materialCardView2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints">

                <TextView
                    android:id="@+id/tv_home_magnitudo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:text="@string/sample_magnitudo"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="bold" />

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/materialCardView2"
                android:layout_width="166dp"
                android:layout_height="60dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/bg_frame"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/materialCardView">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="8dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Pusat Gempa"
                        android:textStyle="bold"
                        android:textSize="14sp"
                        android:textColor="@color/white"/>
                    <TextView
                        android:id="@+id/tv_pusat_gempa"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sample_pusat"
                        android:textSize="9sp"
                        android:textColor="@color/white"/>
                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/materialCardView4"
                android:layout_width="166dp"
                android:layout_height="60dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/bg_frame"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/materialCardView2">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="8dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Kedalaman"
                        android:textStyle="bold"
                        android:textSize="14sp"
                        android:textColor="@color/white"/>
                    <TextView
                        android:id="@+id/tv_detail_kedalaman"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sample_kedalaman"
                        android:textSize="9sp"
                        android:textColor="@color/white"/>
                </LinearLayout>


            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/materialCardView3"
                android:layout_width="166dp"
                android:layout_height="60dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:backgroundTint="@color/bg_frame"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/materialCardView">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="8dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Dirasakan"
                        android:textStyle="bold"
                        android:textSize="14sp"
                        android:textColor="@color/white"/>
                    <TextView
                        android:id="@+id/tv_dirasakan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sample_dirasakan"
                        android:textSize="9sp"
                        android:textColor="@color/white"/>
                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="166dp"
                android:layout_height="60dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:backgroundTint="@color/bg_frame"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/materialCardView3">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="8dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Potensi"
                        android:textStyle="bold"
                        android:textSize="14sp"
                        android:textColor="@color/white"/>
                    <TextView
                        android:id="@+id/tv_potensi"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sample_potensi"
                        android:textSize="9sp"
                        android:textColor="@color/white"/>
                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="Tidak berpotensi sunami !"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/materialCardView4" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_to_shakemap"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/bg_button_shakemap"
                android:text="@string/pergi_melihat_shakemap"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</LinearLayout>